src/objects/FinServ__CustomLabelConf__mdt.object
<CustomObject>
    <description>Defines custom label overrides on pages that use field sets.</description>
    <fields>
        <fullName>FinServ__NewLabel__c</fullName>
        <label>New Label</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ObjectFieldName__c</fullName>
        <label>Object Field Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ObjectName__c</fullName>
        <label>Object Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ObjectRTNamespace__c</fullName>
        <defaultValue>&quot;Industries&quot;</defaultValue>
        <label>Record Type Namespace</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ObjectRecordType__c</fullName>
        <label>Object Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__RelationshipName__c</fullName>
        <label>Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ViewName__c</fullName>
        <label>View Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CustomLabelConf</label>
    <pluralLabel>CustomLabelConfs</pluralLabel>
</CustomObject>